--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.6.1",
+    "dayjs": "^1.8.35",
     "tailwindcss": "^1.8.10",
     "vue": "^3.0.0-rc.10"
   },
