--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "@tailwindcss/ui": "^0.6.2",
     "dayjs": "^1.8.36",
     "tailwindcss": "^1.8.10",
-    "vue": "^3.0.0-rc.13"
+    "vue": "^3.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^4.1.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.13",
+    "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.1.0",
     "eslint": "^7.9.0",
     "eslint-plugin-vue": "^7.0.0-beta.3",
-    "typescript": "^4.0.2",
+    "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4"
   }
 }
