--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.6.2",
+    "@types/faker": "^5.1.0",
     "dayjs": "^1.8.36",
+    "faker": "^5.1.0",
+    "minisearch": "^2.6.2",
+    "miragejs": "^0.1.40",
     "tailwindcss": "^1.8.10",
     "vue": "^3.0.0"
   },
