--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.6.2",
     "@types/faker": "^5.1.0",
+    "axios": "^0.20.0",
     "dayjs": "^1.8.36",
     "faker": "^5.1.0",
     "minisearch": "^2.6.2",
