--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
-  "name": "vite-ts-tailwind-starter",
+  "name": "datatable-experiment",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "cy": "yarn dev & wait-on http://localhost:3000",
+    "test": "concurrently \"yarn dev\" \"yarn run cy\" --kill-others",
+    "test:ci": "cypress run --headless"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
@@ -19,14 +22,19 @@
     "vue": "^3.0.0"
   },
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-standard": "^5.1.2",
     "@vue/eslint-config-typescript": "^5.1.0",
+    "concurrently": "^5.3.0",
+    "cypress": "^5.2.0",
     "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.0-beta.4",
+    "start-server-and-test": "^1.11.4",
     "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4"
+    "vite": "^1.0.0-rc.4",
+    "wait-on": "^5.2.0"
   }
 }
