--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "start": "yarn dev & wait-on http://localhost:3000",
+    "start": "yarn dev --mode test & wait-on http://localhost:3000",
     "test": "concurrently \"yarn dev\" \"cypress open\" --kill-others",
     "test:ci": "cypress run --headless"
   },
