--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "vite",
     "build": "vite build",
     "start": "yarn dev --mode test & wait-on http://localhost:3000",
-    "test": "concurrently \"yarn dev\" \"cypress open\" --kill-others",
+    "test": "concurrently \"yarn dev --mode test\" \"cypress open\" --kill-others",
     "test:ci": "cypress run --headless"
   },
   "dependencies": {
@@ -19,7 +19,8 @@
     "miragejs": "^0.1.41",
     "mitt": "^2.1.0",
     "tailwindcss": "^1.8.10",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-beta.12"
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
