--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
     "@tailwindcss/ui": "^0.6.2",
-    "@types/faker": "^5.1.2",
     "axios": "^0.20.0",
     "dayjs": "^1.9.0",
     "faker": "^5.1.0",
+    "lodash-es": "^4.17.15",
     "minisearch": "^3.0.0",
     "miragejs": "^0.1.41",
     "mitt": "^2.1.0",
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
+    "@types/faker": "^5.1.2",
+    "@types/lodash-es": "^4.17.3",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
     "@vue/compiler-sfc": "^3.0.0",
