--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "vite build",
     "start": "yarn dev --mode test & wait-on http://localhost:3000",
     "test": "concurrently \"yarn dev --mode test\" \"cypress open\" --kill-others",
-    "test:ci": "cypress run --headless"
+    "test:ci": "concurrently \"yarn dev --mode test\" \"cypress run --headless\" --kill-others",
+    "test:ci:old": "cypress run --headless"
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
@@ -20,7 +21,7 @@
     "mitt": "^2.1.0",
     "tailwindcss": "^1.8.10",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0-beta.12"
+    "vue-router": "^4.0.0-beta.13"
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
@@ -35,7 +36,6 @@
     "cypress": "^5.3.0",
     "eslint": "^7.10.0",
     "eslint-plugin-vue": "^7.0.0",
-    "start-server-and-test": "^1.11.4",
     "typescript": "^4.0.3",
     "vite": "^1.0.0-rc.4",
     "wait-on": "^5.2.0"
