--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,8 @@ jobs:
         with:
           browser: chrome
           headless: true
-          start: vite --mode test
+          start: yarn dev --mode test
+          wait-on: 'http://localhost:3000'
   ci:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
