--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,16 +7,16 @@ on:
     branches: [master]
 
 jobs:
-  cypress-run:
-    runs-on: ubuntu-16.04
-    steps:
-      - uses: actions/checkout@v2
-      - uses: cypress-io/github-action@v2
-        with:
-          browser: chrome
-          headless: true
-          start: yarn dev --mode test
-          wait-on: 'http://localhost:3000'
+  # cypress-run:
+  #   runs-on: ubuntu-16.04
+  #   steps:
+  #     - uses: actions/checkout@v2
+  #     - uses: cypress-io/github-action@v2
+  #       with:
+  #         browser: chrome
+  #         headless: true
+  #         start: yarn dev --mode test
+  #         wait-on: 'http://localhost:3000'
   ci:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -68,6 +68,9 @@ jobs:
         run: yarn --frozen-lockfile
 
       ## Test
+      - name: Start devserver
+        run: yarn dev --mode test & wait-on http://localhost:3000
+
       - name: Run tests
         run: yarn test:ci
 
