--- a/package.json
+++ b/package.json
@@ -10,32 +10,32 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.2.0",
-    "@tailwindcss/ui": "^0.6.2",
-    "axios": "^0.20.0",
-    "dayjs": "^1.9.0",
+    "@tailwindcss/ui": "^0.7.2",
+    "axios": "^0.21.0",
+    "dayjs": "^1.9.6",
     "faker": "^5.1.0",
     "lodash-es": "^4.17.15",
-    "minisearch": "^3.0.0",
+    "minisearch": "^3.0.2",
     "miragejs": "^0.1.41",
-    "tailwindcss": "^1.8.10",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0-beta.13"
+    "tailwindcss": "^1.9.6",
+    "vue": "^3.0.2",
+    "vue-router": "^4.0.0-rc.3"
   },
   "devDependencies": {
     "@types/cypress": "^1.1.3",
-    "@types/faker": "^5.1.2",
+    "@types/faker": "^5.1.4",
     "@types/lodash-es": "^4.17.3",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "@typescript-eslint/parser": "^4.4.0",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.0",
+    "@typescript-eslint/parser": "^4.8.0",
+    "@vue/compiler-sfc": "^3.0.2",
     "@vue/eslint-config-standard": "^5.1.2",
-    "@vue/eslint-config-typescript": "^5.1.0",
+    "@vue/eslint-config-typescript": "^7.0.0",
     "concurrently": "^5.3.0",
-    "cypress": "^5.3.0",
-    "eslint": "^7.10.0",
-    "eslint-plugin-vue": "^7.0.1",
-    "typescript": "^4.0.3",
-    "vite": "^1.0.0-rc.4",
+    "cypress": "^5.6.0",
+    "eslint": "^7.13.0",
+    "eslint-plugin-vue": "^7.1.0",
+    "typescript": "^4.0.5",
+    "vite": "^1.0.0-rc.9",
     "wait-on": "^5.2.0"
   }
 }
