--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
     "github": {
         "silent": true
-    }
+    },
+    "rewrites": [
+        { "source": "/*/", "destination": "/index.html" }
+      ]
+    }    
 }
